fix: change prop naming to be more appropriate for small text alignment

--- a/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
+++ b/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
@@ -288,7 +288,7 @@ $scene-illustration-size: 300px;
     }
   }
 
-  &.centerContent.leftAlignTextMobile {
+  &.centerContent.smallScreenTextAlignment {
     .descriptionContainer {
       text-align: left;
 
